# cad_ai

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
apps/occt-service/: README.md  package.json  server.mjs
apps/occt-service/occt_cli/: CMakeLists.txt  main.cpp
apps/web/: README.md  index.html  package-lock.json  package.json  server.mjs  tsconfig.json
apps/web/src/: main.ts
apps/web/tests/: bvh.test.ts  command_executor.test.ts  command_stack.test.ts  geometry_builder.test.ts  geometry_worker.test.ts  gpu_picking.test.ts  interaction_engine.test.ts  scene_bridge.test.ts  snapping.test.ts
crates/kernel/: Cargo.toml  README.md
crates/kernel/src/: lib.rs  scene.rs  wasm.rs
docs/engineering/: command_spec_v0.md  math_conventions.md  occt_options.md  post_p1_plan.md  step_import_native_occt.md
docs/google_sheets/: architecture.csv  benchmark_plan.csv  command_system.csv  data_model_interface.csv  deliverables.csv  dependencies.csv  feasibility_extensibility.csv  issues.csv  next_steps.csv  performance_budget.csv  performance_optimizations.csv  requirements_constraints.csv  risks.csv  roadmap.csv  tech_stack.csv  vision_goals.csv
docs/schema/: scene_graph_v0.example.json  scene_graph_v0.json
docs/ui/: operation_manual.md
poc/: index.html  package-lock.json  package.json  server.mjs  tsconfig.json
poc/src/: main.ts
poc/src/core/: camera.ts  matrix4.ts  mesh.ts  vector3.ts
poc/src/fixtures/: render_fixture.ts
poc/src/renderer/: render_scheduler.ts  renderer.ts  webgl2_renderer.ts  webgpu_renderer.ts
(+24 files in other folders)
